Bug 94184 - kmail sometimes fails to open messages in imap folders
Summary: kmail sometimes fails to open messages in imap folders
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.7.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 95420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-11-30 23:58 UTC by Mathias Homann
Modified: 2007-09-14 12:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mathias Homann 2004-11-30 23:58:27 UTC
Version:           1.7.1 (using KDE 3.3.1, SuSE)
Compiler:          gcc version 3.3.3 (SuSE Linux)
OS:                Linux (i686) release 2.6.5-7.111-default

when i cycle through unread mails in imap folders, kmail sometimes does not show the mails in the preview pane (the preview pane stays empty instead). from ethersniffing i see that kmail actually fetches the message in question, but it does not show it.

the version i use is packaged by adrian@suse.de and the package changelog suggests that his last change (which seems to be the cause for this) was this:

* Thu Nov 25 2004 - adrian@suse.de
- update to current 3_3_BRANCH to get latest SLOX fixes

So i guess its something in there that is the reason for this misbehaviour.
Comment 1 Mathias Homann 2004-12-01 16:44:40 UTC
seems to happen only on one of my two machines. only difference that i can think of is that the machine that seems to work ok has 512meg ram, the other one has 256meg. besides, it seems to happen more often with mime multipart messages, and/or pgp-signed messages.
Comment 2 Mathias Homann 2004-12-09 13:31:00 UTC
upgraded to kde 3.3.2 / kmail 1.7.2, problem still exists, on both machines.
Comment 3 Mathias Homann 2004-12-09 21:35:43 UTC
with this bug, kmail is pretty much useless in an imap environment.
i dont know if anyone cares, but i'd classify this as a showstopper.
Comment 4 Till Adam 2004-12-12 13:08:42 UTC
CVS commit by tilladam: 

Make sure the preview area is not prematurely emptied. 

Adrian, would you consider an update, this is fairly annoying for users.

BUG: 94184
CCMAIL: adrian@suse.de


  M +1 -2      kmheaders.cpp   1.658.2.9


--- kdepim/kmail/kmheaders.cpp  #1.658.2.8:1.658.2.9
@@ -1252,5 +1252,4 @@ void KMHeaders::msgAdded(int id)
            this, SLOT(highlightMessage(QListViewItem*)));
 
-  emit messageListUpdated();
   END_TIMER(msgAdded);
   SHOW_TIMER(msgAdded);
@@ -2189,5 +2188,5 @@ void KMHeaders::highlightMessage(QListVi
   {
     KMMessage *msg = mFolder->getMsg(idx);
-    if (!msg || msg->transferInProgress())
+    if (!msg )
     {
       emit selected( 0 );


Comment 5 Mathias Homann 2004-12-12 23:11:31 UTC
i don't think this is about "premature emptying", because when it happens, the message i try to read is also not marked as read if it was unread...
Comment 6 Mathias Homann 2004-12-12 23:27:12 UTC
oh, also, if i select all messages in the folder when it happens, do "mark all read", and then select another message, and then "the one" again, it shows up in the preview as wanted.
Comment 7 Carsten Burghardt 2004-12-19 14:14:47 UTC
*** Bug 95420 has been marked as a duplicate of this bug. ***
Comment 8 Mathias Homann 2004-12-27 19:05:36 UTC
oh, btw, when can users expect this patch to be "in effect" in some _released_ version of kde/kmail? earlier than kde 4.0?
Comment 9 Till Adam 2004-12-27 19:09:01 UTC
It will be in 3.3.3, 3.4 and if there is one your next updated kdepim rpm from SuSE. I've told the packagers about this fix, it's their decision whether to release updates or not.
Comment 10 Mathias Homann 2004-12-27 19:19:32 UTC
good.

/me starts cronjob to pester a certain person about it

i was asking because i already experienced bugfixes and feature requests within kde which were tagged as "solved in CVS" several years ago, and are still not implememted in a released version...

Comment 11 Till Adam 2004-12-27 19:27:29 UTC
On Monday 27 December 2004 19:19, Mathias Homann wrote:
> i was asking because i already experienced bugfixes and feature requests
> within kde which were tagged as "solved in CVS" several years ago, and are
> still not implememted in a released version...

If there is such a bug or feature then please tell us. If something is fixed 
in cvs it will be in the next release. If it isn't, that's new bug. So I'd be 
interested what feature/bug you are refering to.