Make sure the preview area is not prematurely emptied.

Adrian, would you consider an update, this is fairly annoying for users.

BUG: 94184
CCMAIL: adrian@suse.de

svn path=/branches/KDE_3_3_BRANCH/kdepim/; revision=370066